# rust-synth

./: Cargo.toml  README.md  run.toml  sounds.toml
.github/workflows/: check.yml
src/: audio.rs  config.rs  main.rs  message.rs  midi.rs  vsthost.rs
src/audio/: dasp_test.rs  general.rs  parameters.rs  sounds.rs
