[package]
name = "audiotest"
version = "0.1.0"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.16"
nannou_osc = "0.16"
nannou_audio = "0.16"
midir = "0.7"
crossbeam = "0.8"
audrey = "0.3"
hound = "3.4.0"
ringbuf = "0.2.2"
walkdir = "2"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
midly = "0.5"
vst = { git = "https://github.com/rustaudio/vst-rs" }
arrayvec = "0.7"
notify = "4.0"
dasp = { version = "0.11", features = ["all"] }
dsp-chain = { git = "https://github.com/rrx/dsp-chain.git", branch = "master" }
num-traits = "0.2"
